--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -1,30 +1,66 @@
 .tools {
-    width: 100px;
-    float: left;
-    padding: 5px;
+  width: 100px;
+  float: left;
+  padding: 5px;
 }
 
 .tools li {
-    padding: 5px;
-    list-style: none;
+  padding: 5px;
+  list-style: none;
 }
 
 .tools li:hover {
-    color: cornflowerblue;
-    cursor: pointer;
+  color: cornflowerblue;
+  cursor: pointer;
 }
 
 .tools li.marked {
-    background-color: cornflowerblue;
-    color: white;
+  background-color: cornflowerblue;
+  color: white;
 }
 
 #drawArea {
-    border:1px solid #000000;
-    background-color: lightgrey;
+  border: 1px solid #000000;
+  background-color: lightgrey;
 }
 
-
 #events {
-    display: none;
+  display: none;
+}
+
+.navbar {
+  background: #2d3e50;
+  padding: 0.5em 0;
+  margin-bottom: 1em;
+}
+.navbar-list {
+  display: flex;
+  gap: 1.5em;
+  list-style: none;
+  margin: 0;
+  padding: 0 2em;
+}
+.navbar-list li {
+  display: inline;
+}
+.navbar-list .nav-link {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
+  padding: 0.3em 0.7em;
+  border-radius: 4px;
+  transition: background 0.2s;
+}
+.navbar-list .nav-link.active,
+.navbar-list .nav-link:hover {
+  background: cornflowerblue;
+  color: #fff;
+}
+.page-content {
+  max-width: 900px;
+  margin: 0 auto;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+  padding: 2em 2em 1em 2em;
 }
